forlulario pagina de contato e css

--- a/contato.html
+++ b/contato.html
@@ -3,9 +3,53 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewpoint" content="width=device-width">
-		<title>IncluHelp</title>
+		<title>IncluHelpContato</title>
 
 		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="style-incluhelp.css">
+		<link rel="stylesheet" href="style-contato.css">
 		<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Montserrat:wght@100&family=Poppins:wght@100&display=swap"> 
 	</head>
+
+	<body>
+		<header>
+			<div>
+				<h1><img src="incluhelp.jpeg" alt="Logo da IncluHelp"></h1> 
+
+					<nav>
+						<ul>
+							<li><a href="incluhelp.html">Home</a></li>	
+							<li><a href="formacao.html">Formação</a></li>	
+							<li><a href="proposta.html">Protosta</a></li>
+							<li><a href="contato.html">Contato</a></li>
+						</ul>
+					</nav>	
+				</div>		
+		</header>
+
+				<h2><p>Preencha o formulário para mais informações</p></h2>
+				
+		<main>
+			<form>
+				<label for="nome">Nome</label>
+				<input type="text" id="nome" class="input-padrao" required>
+
+				<label for="email">Email</label>
+				<input type="email" id="email" class="input-padrao" required placeholder="seuemail@domínio.com">
+
+				<label for="telefone">Telefone</label>
+				<input type="tel" id="telefone" class="input-padrao" required placeholder="(XX) XXXX-XXXX">
+
+				<label for="mensagem">Mensagem</label>
+				<textarea cols="70" rows="10" id="mensagem" class="input-padrao" required></textarea>
+
+				<input type="submit" value="Enviar formulário" class="enviar">
+		</main>
+
+		 		<h3><p>@incluhelp</p></h3>
+
+		<footer>
+				<img src="incluhelppeq.jpg">
+				<p class="copyright">&copy; Copyright IncluHelp - 2023
+		</footer>		
+			
+</html>
