pagina de formacao e css

--- a/formacao.html
+++ b/formacao.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewpoint" content="width=device-width">
-		<title>IncluHelpContato</title>
+		<title>IncluHelpFormação</title>
 
 		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="style-contato.css">
+		<link rel="stylesheet" href="style-formacao.css">
 		<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Montserrat:wght@100&family=Poppins:wght@100&display=swap"> 
 	</head>
 
@@ -26,26 +26,12 @@
 				</div>		
 		</header>
 
-				<h2><p>Preencha o formulário para mais informações</p></h2>
-				
-		<main>
-			<form>
-				<label for="nome">Nome</label>
-				<input type="text" id="nome" class="input-padrao" required>
+		<img class="eveluana" src="eveluana.png">
 
-				<label for="email">Email</label>
-				<input type="email" id="email" class="input-padrao" required placeholder="seuemail@domínio.com">
+		<h2><p>Eveliny Cacau: Graduada em Pedagogia, Pós-graduada em TEA Transtorno do Espectro Autista, Neuropsicopedagoga, Educação Especial e Inclusiva, Curso de Extensão em Atendimento Educacional Espacializado (AEE).<p></h2>
 
-				<label for="telefone">Telefone</label>
-				<input type="tel" id="telefone" class="input-padrao" required placeholder="(XX) XXXX-XXXX">
+		<h2><p>Luana Santana: Graduada em Pedagogia, Pós-graduada em Psicopedagogia, Educação Especial e Inclusiva.<p></h2>  
 
-				<label for="mensagem">Mensagem</label>
-				<textarea cols="70" rows="10" id="mensagem" class="input-padrao" required></textarea>
-
-				<input type="submit" value="Enviar formulário" class="enviar">
-		</main>
-
-		 		<h3><p>@incluhelp</p></h3>
 
 		<footer>
 				<img src="incluhelppeq.jpg">
