excluindo documentos desnecessarios e modificando contato incluhelp style-contato style-formacao

--- a/contato.html
+++ b/contato.html
@@ -43,6 +43,7 @@
 				<textarea cols="70" rows="10" id="mensagem" class="input-padrao" required></textarea>
 
 				<input type="submit" value="Enviar formulário" class="enviar">
+			</form>	
 		</main>
 
 		 		<h3><p>@incluhelp</p></h3>
