--- a/incluhelp.html
+++ b/incluhelp.html
@@ -30,7 +30,7 @@
 			<section class="principal">
 				<h2 class="titulo-principal">Sobre a Inclu Help</h2>
 
-				<img class="inclu" src="incluhelppeq.jpg" alt="Utensilíos de um barbeiro">
+				<img class="inclu" src="incluhelppeq.jpg">
 
 				<p>A inclusão nos mostra como entender e conviver com pessoas diferentes. Com direitos iguais, podemos construir um mundo acolhedor para todos. A <strong>Inclu Help</strong> acredita que a inclusão ultrapassa os muros das escolas, e precisamos contribuir para promover uma sociedade democrática.</p>
 
